--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepack": "npm run build"
+    "prepack": "npm run build",
+    "seed": "ts-node src/seed-app.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.7",
@@ -27,12 +28,12 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@ngneat/falso": "^7.2.0",
-    "@types/jsonwebtoken": "^9.0.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.0.4",
     "mysql2": "^3.11.3",
-    "pg": "^8.13.0",
+    "pg": "^8.13.1",
     "project-tp1": "file:",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -44,10 +45,17 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^6.0.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/connect": "^3.4.38",
+    "@types/express": "^4.17.21",
+    "@types/express-serve-static-core": "^5.0.2",
+    "@types/http-errors": "^2.0.4",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/mime": "^4.0.0",
+    "@types/node": "^20.17.9",
+    "@types/qs": "^6.9.17",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^8.42.0",
@@ -59,7 +67,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
